--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <nav class="navbar py-3 py-lg-4">
           <!-- Logo -->
-          <a href="#">
+          <a href="index.html">
             <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
               alt="chatTalker"
@@ -33,7 +33,9 @@
           </a>
 
           <!-- 按鈕 -->
-          <a class="btn btn-third rounded-pill link-light px-5 py-2" href="#"
+          <a
+            class="btn btn-third rounded-pill link-light px-5 py-2"
+            href="payment.html"
             >方案費用</a
           >
         </nav>
@@ -253,7 +255,7 @@
             </h3>
             <a
               class="btn btn-primary rounded-pill link-light px-5 py-2 mb-5"
-              href="#"
+              href="payment.html"
               >方案費用</a
             >
           </div>
@@ -1353,7 +1355,9 @@
         </h2>
 
         <div class="text-center">
-          <a class="btn btn-primary rounded-pill link-light px-5 py-2" href="#"
+          <a
+            class="btn btn-primary rounded-pill link-light px-5 py-2"
+            href="payment.html"
             >方案費用</a
           >
         </div>
