--- a/payment.html
+++ b/payment.html
@@ -24,7 +24,7 @@
       <div class="container bg-lightgray bg-lg-transparent">
         <nav class="navbar py-3 py-lg-4">
           <!-- Logo -->
-          <a href="#">
+          <a href="index.html">
             <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
               alt="chatTalker"
