feat: 完成 "常見問題"

--- a/payment.html
+++ b/payment.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- 彈性選擇 -->
-    <section class="position-relative">
+    <section class="position-relative mb-8 mb-lg-13">
       <h3 class="h2 fw-bold text-center d-none d-lg-block mb-7">
         彈性選擇，提供您選擇最適合的方案
       </h3>
@@ -314,6 +314,105 @@
         alt="ball03"
         class="w-50 w-lg-25 position-absolute top-50 start-0 translate-middle z--1"
       />
+    </section>
+
+    <section class="mb-8 mb-lg-13">
+      <h2 class="fw-bold lh-base text-center mb-5 mb-lg-7">常見問題</h2>
+
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+              <!-- 我要怎麼變更方案？ -->
+              <div class="accordion-item rounded-4 shadow mb-3">
+                <h3 class="accordion-header rounded-4" id="flush-headingOne">
+                  <button
+                    class="accordion-button collapsed rounded-4 px-3 px-lg-5 fs-6 fs-lg-5"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseOne"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseOne"
+                  >
+                    我要怎麼變更方案？
+                  </button>
+                </h3>
+                <div
+                  id="flush-collapseOne"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingOne"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <p
+                    class="accordion-body pt-0 pt-lg-2 pb-4 pb-lg-5 px-3 px-lg-5 mb-0 text-black-50"
+                  >
+                    當然哦！我們錢都收了，不會拋棄你的！
+                    請您直接來我們公司，我們假日也都在辦公室。
+                  </p>
+                </div>
+              </div>
+
+              <!-- 如果我沒有LINE官方帳號怎麼辦？ -->
+              <div class="accordion-item rounded-4 shadow mb-3">
+                <h3 class="accordion-header rounded-4" id="flush-headingTwo">
+                  <button
+                    class="accordion-button collapsed rounded-4 px-3 px-lg-5 fs-6 fs-lg-5"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="#flush-collapseTwo"
+                  >
+                    如果我沒有LINE官方帳號怎麼辦？
+                  </button>
+                </h3>
+                <div
+                  id="flush-collapseTwo"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-collapseTwo"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <p
+                    class="accordion-body pt-0 pt-lg-2 pb-4 pb-lg-5 px-3 px-lg-5 mb-0 text-black-50"
+                  >
+                    當然哦！我們錢都收了，不會拋棄你的！
+                    請您直接來我們公司，我們假日也都在辦公室。
+                  </p>
+                </div>
+              </div>
+
+              <!-- 非上班日有客服支援嗎？ -->
+              <div class="accordion-item rounded-4 shadow mb-3">
+                <h3 class="accordion-header rounded-4" id="flush-headingThree">
+                  <button
+                    class="accordion-button collapsed rounded-4 px-3 px-lg-5 fs-6 fs-lg-5"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseThree"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseThree"
+                  >
+                    非上班日有客服支援嗎？
+                  </button>
+                </h3>
+                <div
+                  id="flush-collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingThree"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <p
+                    class="accordion-body pt-0 pt-lg-2 pb-4 pb-lg-5 px-3 px-lg-5 mb-0 text-black-50"
+                  >
+                    當然哦！我們錢都收了，不會拋棄你的！
+                    請您直接來我們公司，我們假日也都在辦公室。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="w-100 py-3 bg-lightgray text-center">
