--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
         id="carouselExampleIndicators"
         class="carousel slide d-none d-lg-block"
         data-bs-ride="carousel"
+        data-bs-interval="false"
       >
         <div class="carousel-indicators">
           <button
@@ -1074,6 +1075,7 @@
         id="carouselExampleIndicatorsMobile"
         class="carousel slide d-block d-lg-none"
         data-bs-ride="carousel"
+        data-bs-interval="false"
       >
         <div class="carousel-indicators">
           <button
@@ -1380,8 +1382,5 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-
-    <!-- js -->
-    <script src="./src/app.js"></script>
   </body>
 </html>
