--- a/payment.html
+++ b/payment.html
@@ -435,6 +435,6 @@
     ></script>
 
     <!-- js -->
-    <script src="./src/payment.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
