fix: 修正 "彈性選擇" 訂閱用戶數灰底不等高

--- a/payment.html
+++ b/payment.html
@@ -136,7 +136,7 @@
               <div class="row justify-content-between gx-0 mb-4 mb-lg-5">
                 <div class="col">
                   <div
-                    class="bg-lightgray rounded-4 ms-3 ms-lg-5 px-4 px-lg-5 py-3 py-lg-4"
+                    class="bg-lightgray rounded-4 ms-3 ms-lg-5 px-4 px-lg-5 py-3 py-lg-4 h-100"
                   >
                     <p class="fs-0">訂閱用戶數</p>
                     <p class="text-primary text-nowrap">
@@ -154,7 +154,7 @@
 
                 <div class="col">
                   <div
-                    class="bg-lightgray rounded-4 me-3 me-lg-5 px-4 px-lg-5 py-3 py-lg-4"
+                    class="bg-lightgray rounded-4 me-3 me-lg-5 px-4 px-lg-5 py-3 py-lg-4 h-100"
                   >
                     <p class="fs-0">試算每月的費用</p>
                     <p class="text-nowrap">
@@ -228,7 +228,7 @@
               <div class="row justify-content-between gx-0 mb-4 mb-lg-5">
                 <div class="col">
                   <div
-                    class="bg-lightgray rounded-4 ms-3 ms-lg-5 px-4 px-lg-5 py-3 py-lg-4"
+                    class="bg-lightgray rounded-4 ms-3 ms-lg-5 px-4 px-lg-5 py-3 py-lg-4 h-100"
                   >
                     <p class="fs-0">訂閱用戶數</p>
                     <p class="text-primary text-nowrap">
@@ -246,7 +246,7 @@
 
                 <div class="col">
                   <div
-                    class="bg-lightgray rounded-4 me-3 me-lg-5 px-4 px-lg-5 py-3 py-lg-4"
+                    class="bg-lightgray rounded-4 me-3 me-lg-5 px-4 px-lg-5 py-3 py-lg-4 h-100"
                   >
                     <p class="fs-0">試算每月的費用</p>
                     <p class="text-nowrap">
