--- a/payment.html
+++ b/payment.html
@@ -19,22 +19,24 @@
     <!-- 導覽列 + header -->
     <section class="position-relative paymentIntroduction mb-8 mb-lg-13">
       <!-- 導覽列 -->
-      <div class="container bg-lightgray bg-lg-transparent">
-        <nav class="navbar py-3 py-lg-4">
-          <!-- Logo -->
-          <a href="index.html">
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
-              alt="chatTalker"
-              class="logo"
-            />
-          </a>
+      <div class="container-fluid bg-white bg-lg-transparent">
+        <div class="container">
+          <nav class="navbar py-3 py-lg-4">
+            <!-- Logo -->
+            <a href="index.html">
+              <img
+                src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
+                alt="chatTalker"
+                class="logo"
+              />
+            </a>
 
-          <!-- 按鈕 -->
-          <a class="btn btn-third rounded-pill link-light px-5 py-2" href="#"
-            >方案費用</a
-          >
-        </nav>
+            <!-- 按鈕 -->
+            <a class="btn btn-third rounded-pill link-light px-5 py-2" href="#"
+              >方案費用</a
+            >
+          </nav>
+        </div>
       </div>
 
       <!-- 手機板 - 導覽列下方邊線 -->
@@ -63,7 +65,7 @@
       <img
       src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner_sm.svg"
       alt=bg_home"" class="position-absolute end-0 bottom-0 z--1 d-block
-      d-lg-none " />
+      d-lg-none w-100" />
     </section>
 
     <!-- 彈性選擇 -->
