fix: 修正語意標籤
section 標籤在使用時要注意，區塊內需要有區塊標題，
所以像是第一塊 nav 我覺得可以直接用 nav 標籤就好（這邊不算是區塊，比較偏向導覽列），不用多包一層 section

https://github.com/jaosn60810/safe_mission2/issues/2#issue-1243253310

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- 導覽列 + header -->
-    <section class="min-vh-100 position-relative pb-5 pb-lg-7">
+    <div class="min-vh-100 position-relative pb-5 pb-lg-7">
       <!-- 導覽列 -->
       <div class="container">
         <nav class="navbar py-3 py-lg-4">
@@ -82,7 +82,7 @@
       src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/bg_home.svg"
       alt=bg_home"" class="position-absolute top-0 end-0 z--1 vh-100 d-none
       d-lg-block" />
-    </section>
+    </div>
 
     <!-- 三大平台，我來搞定 -->
     <section class="py-5 py-lg-7">
