--- a/payment.html
+++ b/payment.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- 導覽列 + header -->
-    <section class="position-relative paymentIntroduction mb-8 mb-lg-13">
+    <div class="position-relative paymentIntroduction mb-8 mb-lg-13">
       <!-- 導覽列 -->
       <div class="container-fluid bg-white bg-lg-transparent">
         <div class="container">
@@ -66,7 +66,7 @@
       src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner_sm.svg"
       alt=bg_home"" class="position-absolute end-0 bottom-0 z--1 d-block
       d-lg-none w-100" />
-    </section>
+    </div>
 
     <!-- 彈性選擇 -->
     <section class="position-relative mb-8 mb-lg-13">
