fix: 修正圖片尺寸
快速了解客戶輪廓 的區塊，四個卡片的圖片可以再調整一下尺寸

https://github.com/jaosn60810/safe_mission2/issues/3#issue-1243827307

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon01.svg"
-                    class="w-100" alt="無敵轉換術"' />
+                    class="scale-60" alt="無敵轉換術"' />
                   </div>
 
                   <div class="card-body p-0">
@@ -288,7 +288,7 @@
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon02.svg"
-                    class="w-100 " alt="聊天機器人"' />
+                    class="scale-60" alt="聊天機器人"' />
                   </div>
 
                   <div class="card-body p-0">
@@ -309,7 +309,7 @@
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon03.svg"
-                    class="w-100 " alt="一站式訊息中心"' />
+                    class="scale-60" alt="一站式訊息中心"' />
                   </div>
 
                   <div class="card-body p-0">
@@ -330,7 +330,7 @@
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon04.svg"
-                    class="w-100 " alt="群發訊息"' />
+                    class="scale-60" alt="群發訊息"' />
                   </div>
 
                   <div class="card-body p-0">
