fix: 修正按鈕被切掉的問題
 just content center 和 overflow x 一同使用會導致第一個元素被切掉，改成使用 margin auto 推

https://github.com/jaosn60810/safe_mission2/issues/4#issue-1243838204

--- a/payment.html
+++ b/payment.html
@@ -80,9 +80,9 @@
 
       <!-- 按鈕群 -->
       <ul
-        class="list-unstyled d-flex text-nowrap justify-content-lg-center overflow-auto mb-5 mb-lg-7 programBtns"
+        class="list-unstyled d-flex text-nowrap overflow-auto mb-5 mb-lg-7 programBtns"
       >
-        <li class="mx-2">
+        <li class="ms-auto me-2">
           <a
             class="btn btn-outline-primary rounded-pill px-3 px-lg-5 py-2 active"
             href="#"
@@ -110,7 +110,7 @@
             >25000位</a
           >
         </li>
-        <li class="mx-2">
+        <li class="ms-2 me-auto">
           <a
             class="btn btn-outline-primary rounded-pill px-3 px-lg-5 py-2"
             href="#"
